--- a/css/style.css
+++ b/css/style.css
@@ -891,13 +891,13 @@
   .items.show #primary .element:last-of-type {
     padding-bottom: 0;
   }
-  .items.show #content #sidebar .videoWrapper {
+  .items.show #content #primary .videoWrapper {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
 	padding-top: 25px;
 	height: 0;
   }
-  .items.show #content #sidebar .videoWrapper iframe {
+  .items.show #content #primary .videoWrapper iframe {
 	position: absolute;
 	top: 0;
 	left: 0;
