--- a/css/style.css
+++ b/css/style.css
@@ -629,7 +629,7 @@
 	background-color: #3c3c3c;
 	border-top: 1px solid #5C5C5C;
 	border-bottom: 1px solid #0F0F0F;
-	margin-bottom: 3%;
+	margin-bottom: 2em;
   }
   #content .pre-footer {
 	background-image: url("../images/egg-shell.png");
