--- a/css/style.css
+++ b/css/style.css
@@ -857,6 +857,12 @@
   }
 
   /* !---------- Items ---------- */
+  .items.show #primary > div, .items.show #sidebar > div {
+	padding: 1em;
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+  }
   .items.show h3 {
     margin-bottom: 0.75em;
   }
@@ -895,6 +901,8 @@
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
 	padding-top: 25px;
+	padding-left: 0;
+	padding-right: 0;
 	height: 0;
   }
   .items.show #content #primary .videoWrapper iframe {
@@ -903,6 +911,9 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
+	-moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
   }
 
   #content #outputs {
