--- a/css/style.css
+++ b/css/style.css
@@ -967,7 +967,7 @@
     display: block;
 	width: 100%;
   }
-  .related-items .overlay, .item .overlay {
+  .related-thumb .overlay, .item .overlay {
 	position: absolute;
 	bottom: 0;
 	left: 0;
