--- a/css/style.css
+++ b/css/style.css
@@ -643,8 +643,7 @@
   #content #primary > h2:first-child, #content #primary > div > h2:first-child,
   #content #sidebar > h2:first-child, #content #sidebar > div > h2:first-child {
     padding: 0 0 0.375em;
-    font-weight: 500;
-    margin: 0 0 0.75em 0;
+    margin: 0;
     width: 100%;
   }
   #content > div > *:only-child, #content section > *:only-child {
@@ -782,9 +781,6 @@
     margin-bottom: 1.125em;
 
   }
-  #primary div {
-    margin-bottom: 1.125em;
-  }
   #primary h1:first-child {
     margin-top: 0;
   }
@@ -859,6 +855,7 @@
   /* !---------- Items ---------- */
   .items.show #primary > div, .items.show #sidebar > div {
 	padding: 1em;
+	margin-bottom: 1em;
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.1);
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.1);
     box-shadow: 0 1px 2px rgba(0,0,0,.1);
