--- a/css/style.css
+++ b/css/style.css
@@ -858,7 +858,10 @@
 	margin-bottom: 1em;
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.1);
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.1);
-    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    box-shadow: 0 0 5px 1px rgba(0,0,0,.1);
+	background-color: #F9F9F9;
+	background-image: url("../images/egg-shell.png");
+	background-repeat: repeat;
   }
   .items.show h3 {
     margin-bottom: 0.75em;
