--- a/css/style.css
+++ b/css/style.css
@@ -846,9 +846,7 @@
   .items.show #primary > div, .items.show #sidebar > div {
 	padding: 1em;
 	margin-bottom: 1em;
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.1);
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.1);
-    box-shadow: 0 0 5px 1px rgba(0,0,0,.1);
+	border: 1px solid #e1e2e3;
 	background-color: #F9F9F9;
   }
   .items.show h3 {
@@ -912,6 +910,12 @@
 	width: 100%;
 	display: inline-block;
 	margin-bottom: 1em;
+	padding-bottom: 1em;
+	border-bottom: 1px solid #e1e2e3;
+  }
+  #sidebar .related-item:last-of-type {
+	padding-bottom: 0;
+	border-bottom: 0;
   }
   #sidebar .related-item .description {
 	width: 67%;
