--- a/css/style.css
+++ b/css/style.css
@@ -667,6 +667,14 @@
     border-bottom: 0;
     padding-bottom: 0.375em;
   }
+  #content .element-set .element {
+	border-bottom: 1px solid #e1e2e3;
+	padding-top: 1em;
+	padding-bottom: 1em;
+  }
+  #content .element-set .element:first-of-type {
+	padding-top: 0;
+  }
   #content #search-filters, #content #item-filters {
     padding: 10px 0;
 	color: #fff;
@@ -851,6 +859,7 @@
   }
   .items.show h3 {
     margin-bottom: 0.75em;
+	margin-top: 0;
   }
   .items.show #itemfiles #item-images > div {
     width: 22.5%;
@@ -900,9 +909,6 @@
 	-moz-box-shadow: none;
     -webkit-box-shadow: none;
     box-shadow: none;
-  }
-  .element-set .element {
-	border-bottom: 1px solid #e1e2e3;
   }
   #sidebar .related-thumb {
 	width: 33%;
