--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@
   }
 
   /* !---------- Global classes ---------- */
-  header, footer, .sub-header, .grid, .show-container, .pre-footer {
+  header, footer, .sub-header, .grid, .show-container, .pre-footer, #null-results {
 	padding: 1.5em 16px;
   }
   .container {
@@ -941,6 +941,18 @@
 	overflow: hidden;
 	margin-left: -1%;
   }
+  .items.browse #null-results #primary {
+	padding: 1em;
+    margin-bottom: 1em;
+    border: 1px solid #e1e2e3;
+    background-color: #F9F9F9;
+  }
+  .items.browse #null-results #sidebar > div {
+	padding: 1em;
+    margin-bottom: 1em;
+    border: 1px solid #e1e2e3;
+    background-color: #F9F9F9;
+  }
   .item.tile {
 	overflow: hidden;
 	float: left;
@@ -1680,7 +1692,7 @@
   }
 
   /* !---------- Content --------- */
-  header, footer, .sub-header, .grid, .show-container, .pre-footer {
+  header, footer, .sub-header, .grid, .show-container, .pre-footer, #null-results {
     *zoom: 1;
     padding-left: 8.47458%;
 	padding-right: 8.47458%;
@@ -1791,13 +1803,13 @@
     width: auto;
   }
 
-  .show #primary, .exhibit-item-show #primary {
+  .show #primary, .browse #primary, .exhibit-item-show #primary {
     width: 66.5%;
     float: left;
     margin-right: 1%;
     display: inline;
   }
-  .show #sidebar, .exhibit-item-show #sidebar {
+  .show #sidebar, .browse #sidebar, .exhibit-item-show #sidebar {
     width: 32.5%;
     float: right;
     margin-right: 0;
