--- a/css/style.css
+++ b/css/style.css
@@ -1787,7 +1787,7 @@
   
   .items .advanced-search-container {
 	width: 66.5%;
-	margin-left: auto;
+	margin-right: auto;
 	margin-left: auto;
   }
   .items #advanced-search-form > div {
