--- a/css/normalize.css
+++ b/css/normalize.css
@@ -76,7 +76,7 @@ body {
  * Address `outline` inconsistency between Chrome and other browsers.
  */
 a:focus {
-  outline: thin dotted;
+  outline: none;
 }
 
 /**
