--- a/css/style.css
+++ b/css/style.css
@@ -667,6 +667,13 @@
     border-bottom: 0;
     padding-bottom: 0.375em;
   }
+  #content .element-set #dublin-core-description div {
+    padding-bottom: 0.75em;
+  }
+  #content .element-set #dublin-core-description div:only-of-type, #content .element-set #dublin-core-description div:last-of-type {
+    border-bottom: 0;
+    padding-bottom: 0.375em;
+  }
   #content .element-set .element {
 	border-bottom: 1px solid #e1e2e3;
 	padding-top: 1em;
