--- a/css/style.css
+++ b/css/style.css
@@ -771,10 +771,10 @@
   #primary > ul, #primary > ol {
     padding-left: 1.5em;
   }
-  .featured-videos, .collection-videos {
+  .featured-videos {
 	width: 100%;
   }
-  #home #content .featured-videos h2, #content div.collection-videos h2 {
+  #home #content .featured-videos h2 {
 	margin-bottom: 0;
 	margin-top: 1rem;
 	margin-left: 1rem;
@@ -782,20 +782,20 @@
 	color: #fff;
 	line-height: 1em;
   }
-  .featured-videos h2 span, .collection-videos h2 span {
+  .featured-videos h2 span {
 	font-size: .5em;
   }
-  #featured-carousel .carousel-item, .collection-videos .collection-carousel-item {
+  #featured-carousel .carousel-item {
 	margin: 1em;
 	position: relative;
 	overflow: hidden;
   }
-  #featured-carousel .carousel-item img, .collection-videos .collection-carousel-item img {
+  #featured-carousel .carousel-item img {
 	display: block;
 	width: 100%;
 	height: auto;
   }
-  #featured-carousel .carousel-item .overlay, .collection-videos .collection-carousel-item .overlay {
+  #featured-carousel .carousel-item .overlay {
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -812,10 +812,10 @@
 	-o-transition: all 0.3s ease-out;
 	transition: all 0.3s ease-out;
   }
-  #featured-carousel .carousel-item:hover .overlay, .collection-videos .collection-carousel-item:hover .overlay {
+  #featured-carousel .carousel-item:hover .overlay {
 	opacity: 1;
   }
-  #featured-carousel .carousel-item .title, .collection-videos .collection-carousel-item .title {
+  #featured-carousel .carousel-item .title {
 	width: 100%;
 	height: 25%;
 	position: absolute;
@@ -827,13 +827,13 @@
 	right: 0;
 	padding: 2%;
   }
-  #featured-carousel .carousel-item .title p, .collection-videos .collection-carousel-item .title p {
+  #featured-carousel .carousel-item .title p {
 	margin: 0;
 	height: 2.4em;
 	overflow: hidden;
 	font-weight: bold;
   }
-  .featured-videos .customNavigation, .collection-videos .customNavigation {
+  .featured-videos .customNavigation {
 	display: none;
   }
 
@@ -1867,40 +1867,6 @@
   }
   .collections.show .item-img {
     margin-left: 0;
-  }
-  #content .collection-videos {
-	position: relative;
-	border-top: 1px solid #e1e2e3;
-	border-bottom: 1px solid #e1e2e3;
-	width:100%;
-	background-color: #F9F9F9;
-	margin-bottom: 3em;
-  }
-  #content .collection-videos:last-of-type {
-	margin-bottom: 0;
-  }
-  #content .collection-videos .customNavigation {
-	display: block;
-  }
-  #content .collection-videos .customNavigation.prev {
-	position: absolute;
-	left: 0;
-	top: 50%;
-	z-index: 1;
-  }
-  #content .collection-videos .customNavigation.next {
-	position: absolute;
-	right: 0;
-	top: 50%;
-	z-index: 1;
-  }
-  #content .collection-videos .customNavigation a{
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	cursor: pointer;
-	color: #0c6fab;
-  }
-  #content .collection-videos .owl-pagination {
-	display: none;
   }
 
   /* !---------- ExhibitBuilder ---------- */
