--- a/css/style.css
+++ b/css/style.css
@@ -1223,6 +1223,65 @@
   .collections h3:only-child {
     margin-bottom: 0em;
   }
+  .collections.browse .grid {
+	clear: both;
+	overflow: hidden;
+	margin-left: -1%;
+  }
+  .collection.tile {
+	overflow: hidden;
+	float: left;
+	width: 32.3333333%;
+	margin-left: 1%;
+	margin-bottom: 3%;
+  }
+  .collection-thumb {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+  }
+  .collection img {
+    display: block;
+	width: 100%;
+  }
+  .collection .overlay {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	top: 0;
+	opacity: 0;
+	background: rgba(0, 0, 0, 0.5);
+	background-image: url("../images/play2.png");
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 25%;
+	-webkit-transition: all 0.3s ease-out;
+	-moz-transition: all 0.3s ease-out;
+	-o-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
+  }
+  .collection.tile:hover .overlay {
+	opacity: 1;
+  }
+  .collection.tile .title {
+	width: 100%;
+	height: 25%;
+	position: absolute;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #fff;
+	text-align: center;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: 2%;
+  }
+  .collection.tile .title p {
+	margin: 0;
+	height: 2.4em;
+	overflow: hidden;
+	font-weight: bold;
+  }
 
   /* !---------- ExhibitBuilder ---------- */
   .exhibits #content .navigation {
