--- a/css/style.css
+++ b/css/style.css
@@ -1240,11 +1240,11 @@
 	overflow: hidden;
 	width: 100%;
   }
-  .collection img {
+  .collection-tile img {
     display: block;
 	width: 100%;
   }
-  .collection .overlay {
+  .collection-tile .overlay {
 	position: absolute;
 	bottom: 0;
 	left: 0;
