--- a/css/style.css
+++ b/css/style.css
@@ -1231,8 +1231,8 @@
   .collection-tile {
 	overflow: hidden;
 	float: left;
-	width: 49%;
-	margin-left: 1%;
+	width: 47%;
+	margin-left: 3%;
 	margin-bottom: 3%;
   }
   .collection-thumb {
@@ -1250,37 +1250,29 @@
 	left: 0;
 	right: 0;
 	top: 0;
-	opacity: 0;
-	background: rgba(0, 0, 0, 0.5);
-	background-image: url("../images/play2.png");
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: 25%;
+	opacity: 1;
+	background: rgba(12, 111, 171, 0.85);
 	-webkit-transition: all 0.3s ease-out;
 	-moz-transition: all 0.3s ease-out;
 	-o-transition: all 0.3s ease-out;
 	transition: all 0.3s ease-out;
   }
   .collection-tile:hover .overlay {
-	opacity: 1;
+	opacity: 0;
   }
   .collection-tile .title {
 	width: 100%;
-	height: 25%;
 	position: absolute;
-	background-color: rgba(0, 0, 0, 0.5);
 	color: #fff;
 	text-align: center;
-	bottom: 0;
+	top: 45%;
 	left: 0;
 	right: 0;
-	padding: 2%;
   }
-  .collection-tile .title p {
+  .collection-tile .title h2 {
 	margin: 0;
 	height: 2.4em;
 	overflow: hidden;
-	font-weight: bold;
   }
 
   /* !---------- ExhibitBuilder ---------- */
@@ -1928,7 +1920,7 @@
     margin-left: 0;
   }
   .collection-tile {
-	width: 32.33333%;
+	width: 30.33333%;
   }
 
   /* !---------- ExhibitBuilder ---------- */
