--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
   -- Search
   ----- Advanced Search
   -- Files
-  -- Collections
+  -- Collections/Tags
   -- ExhibitBuilder
   */
   /* !---------- General HTML Elements ---------- */
@@ -1195,7 +1195,7 @@
     display: inline-block;
   }
 
-  /* !---------- Collections ---------- */
+  /* !---------- Collections/Tags ---------- */
   .collections #content .element-set .element {
     margin-bottom: 1.5em;
   }
@@ -1223,28 +1223,28 @@
   .collections h3:only-child {
     margin-bottom: 0em;
   }
-  .collections.browse .grid {
+  .collections.browse .grid, .items.tags .grid {
 	clear: both;
 	overflow: hidden;
 	margin-left: -3%;
   }
-  .collection-tile {
+  .collection-tile, .tags-tile {
 	overflow: hidden;
 	float: left;
 	width: 47%;
 	margin-left: 3%;
 	margin-bottom: 3%;
   }
-  .collection-thumb {
+  .collection-thumb, .tags-thumb {
 	position: relative;
 	overflow: hidden;
 	width: 100%;
   }
-  .collection-tile img {
+  .collection-tile img, .tags-tile img {
     display: block;
 	width: 100%;
   }
-  .collection-tile .overlay {
+  .collection-tile .overlay, .tags-tile .overlay {
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -1257,10 +1257,10 @@
 	-o-transition: all 0.3s ease-out;
 	transition: all 0.3s ease-out;
   }
-  .collection-tile:hover .overlay {
+  .collection-tile:hover .overlay, .tags-tile:hover .overlay {
 	background: rgba(255, 255, 255, 0.85);
   }
-  .collection-tile .title {
+  .collection-tile .title, .tags-tile .title {
 	width: 100%;
 	position: absolute;
 	color: #fff;
@@ -1272,16 +1272,16 @@
 	padding-left: 4%;
 	padding-right: 4%;
   }
-  .collection-tile .title:before {
+  .collection-tile .title:before, .tags-tile .title:before {
 	content: ' ';
     display: inline-block;
     vertical-align: middle;
     height: 100%;
   }
-  .collection-tile:hover .title {
+  .collection-tile:hover .title, .tags-tile:hover .title {
 	color: #0c6fab;
   }
-  .collection-tile .title h2 {
+  .collection-tile .title h2, .tags-tile .title h2 {
 	display: inline-block;
 	vertical-align: middle;
 	margin: 0;
@@ -1934,7 +1934,7 @@
   .collections.show .item-img {
     margin-left: 0;
   }
-  .collection-tile {
+  .collection-tile, .tags-tile {
 	width: 30.33333%;
   }
 
@@ -2003,7 +2003,7 @@
   body {
 	font-size: 11px;
   }
-  .collection-tile .title h2 {
+  .collection-tile .title h2, .tags-tile .title h2 {
 	font-size: 3em;
   }
 }
@@ -2014,7 +2014,7 @@
   .item.tile {
 	width: 24%;
   }
-  .collection-tile .title h2 {
+  .collection-tile .title h2, .tags-tile .title h2 {
 	font-size: 3.5em;
   }
 }
@@ -2030,7 +2030,7 @@
   .item.tile {
 	width: 11.5%;
   }
-  .collection-tile .title h2 {
+  .collection-tile .title h2, .tags-tile .title h2 {
 	font-size: 4em;
   }
 }
