--- a/css/style.css
+++ b/css/style.css
@@ -1042,6 +1042,7 @@
 	left: 0;
 	right: 0;
 	padding: 2%;
+	opacity: 1;
   }
   .item.tile .title p {
 	margin: 0;
@@ -1055,6 +1056,9 @@
 	right: 0;
 	color: #fff;
 	padding: 2%;
+	opacity: 0;
+  }
+  .item-link-thumb:hover .title, .item.tile:hover .title {
 	opacity: 0;
   }
   .item-link-thumb:hover .extent, .item.tile:hover .extent {
