--- a/css/style.css
+++ b/css/style.css
@@ -1870,7 +1870,7 @@
 
   /* !---------- Home ---------- */
   body#home {
-  background: url(../images/projectors.jpg) no-repeat center center fixed; 
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../images/doonan.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
