--- a/css/style.css
+++ b/css/style.css
@@ -1914,7 +1914,10 @@
 	cursor: pointer;
 	color: #0c6fab;
   }
-  .featured-videos .owl-controls {
+  .featured-videos.owl-theme .owl-controls {
+	margin: 0;
+  }
+   .featured-videos .owl-pagination {
 	display: none;
   }
   #home footer {
