--- a/css/style.css
+++ b/css/style.css
@@ -1014,7 +1014,7 @@
 	float: left;
 	width: 49%;
 	margin-left: 1%;
-	margin-bottom: 3%;
+	margin-bottom: 3.5em;
   }
   .item.tile:nth-child(odd) {
 	clear: left;
