--- a/css/style.css
+++ b/css/style.css
@@ -443,9 +443,11 @@
     text-align: center;
     margin: 0;
     padding: 0.75em 0;
+	height: 2em;
   }
   #site-title img {
-	width: 100%;
+	width: auto;
+	height: 100%;
   }
 
   #search-container {
@@ -1784,6 +1786,9 @@
   }
   .mobile-nav {
     display: none;
+  }
+  #menu-button {
+	  display: none;
   }
 
   /* !---------- Pagination ---------- */
