--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@
   #site-title {
     text-align: center;
     margin: 0;
-    padding: 0.75em 0;
+    padding: 0;
 	height: 2em;
   }
   #site-title img {
