--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,10 @@
   #mobile-nav li {
 	padding: 0.5em 0;
   }
+  #mobile-nav li > ul > li:before {
+	content: "\f0d7";
+	color: #fff;
+  }
   #mobile-nav a {
 	color: #fff;
   }
