--- a/css/style.css
+++ b/css/style.css
@@ -993,6 +993,9 @@
 	overflow: hidden;
 	border: 1px solid #e1e2e3;
   }
+  .simple-page .collection {
+	padding: 1em;
+  }
   #sidebar .item-link-thumb, .collection-link-thumb {
 	width: 33%;
 	float: left;
