--- a/css/style.css
+++ b/css/style.css
@@ -993,7 +993,7 @@
 	overflow: hidden;
 	border: 1px solid #e1e2e3;
   }
-  .simple-page .collection {
+  .simple-page .collections {
 	padding: 1em;
   }
   #sidebar .item-link-thumb, .collection-link-thumb {
