--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,10 @@
     padding-top: 12px;
   }
 
+  .pagination label {
+    padding: 0;
+  }
+
   .pagination li {
     display: inline-block;
     margin-right: 5px;
@@ -340,6 +344,7 @@
   .pagination input[type=text] {
     width: 2.25em;
     text-align: right;
+    margin-left: 5px;
     margin-right: 10px;
     padding-left: 5px !important;
     padding-right: 5px !important;
